[package]
name = "issfire"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.24.2", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
log = { version = "0.4.0" }
chrono = "0.4"
structopt = "0.3.23"
